--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My CSCI 581 Portfolio!</h1>
+    <h1>Welcome to TheRealSalami's CSCI 581 Portfolio!</h1>
     <a href="./1/index.html">Project 0</a>
 </body>
 </html>
