adding project 0 page. seeing if works

--- a/Proj0/index.html
+++ b/Proj0/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>TheRealSalami's Portfolio</title>
+    <title>Project 0</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to TheRealSalami's CSCI 581 Portfolio!</h1>
-    <a href="./Proj0/index.html">Project 0 Link!</a>
+    <h1>Project 0: Figuring this out</h1>
+    I don't know what this will entail yet, but I'm making sure this works first
 </body>
 </html>
